Added link to video, Updated button

--- a/src/app/examples/landing/landing.component.html
+++ b/src/app/examples/landing/landing.component.html
@@ -10,11 +10,11 @@
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Enter Address">
                 </div>
-                <button type="button" class="btn btn-outline-neutral btn-round">Download</button>
+                <button type="button" class="btn btn-outline-neutral btn-round">Search your neighborhood</button>
             </div>
             <br />
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-outline-neutral btn-round"><i class="fa fa-play"></i>Watch video</a>
-            <button type="button" class="btn btn-outline-neutral btn-round">Download</button>
+
+
         </div>
     </div>
 </div>
@@ -26,6 +26,7 @@
                 <h2 class="title">What is a 15 Minute city?</h2>
                 <h5 class="description">A 15 minute city is a wonderful place to be. If you live in a 15 minute city, you can get almost all your needs satisfied within a 15 minute walk from your house. Walking around is so much better than driving. This app seeks to show if your neighboorhood is a 15 minute city. It searches for grocery stores, transit, and parks within a 15 minute walk. </h5>
                 <br>
+                <a href="https://youtu.be/McGyONofhi4" class="btn btn-danger btn-round"><i class="fa fa-play"></i>Watch video</a>
                 <a href="#paper-kit" class="btn btn-danger btn-round">See Details</a>
             </div>
         </div>
