Changed background image

--- a/src/app/examples/landing/landing.component.html
+++ b/src/app/examples/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/daniel-olahh.jpg');">
+<div class="page-header" data-parallax="true" style="background-image: url('./assets/img/background/IMG_7182.jpg');">
     <div class="filter"></div>
     <div class="container">
         <div class="motto text-center">
@@ -35,11 +35,11 @@
             <div class="col-md-3">
                 <div class="info">
                     <div class="icon icon-danger">
-                        <i class="nc-icon nc-album-2"></i>
+                        <i class="nc-icon nc-basket"></i>
                     </div>
                     <div class="description">
-                        <h4 class="info-title">Beautiful Gallery</h4>
-                        <p class="description">Spend your time generating new ideas. You don't have to think of implementing.</p>
+                        <h4 class="info-title">Nearby stores</h4>
+                        <p class="description">No good neighborhood is complete without a grocery store</p>
                         <a href="#pkp" class="btn btn-link btn-danger">See more</a>
                     </div>
                 </div>
@@ -47,11 +47,11 @@
             <div class="col-md-3">
                 <div class="info">
                     <div class="icon icon-danger">
-                        <i class="nc-icon nc-bulb-63"></i>
+                        <i class="nc-icon nc-bus-front-12"></i>
                     </div>
                     <div class="description">
-                        <h4 class="info-title">New Ideas</h4>
-                        <p>Larger, yet dramatically thinner. More powerful, but remarkably power efficient.</p>
+                        <h4 class="info-title">Nearby transit</h4>
+                        <p>Shows nearby transit stops</p>
                         <a href="#pkp" class="btn btn-link btn-danger">See more</a>
                     </div>
                 </div>
@@ -59,11 +59,11 @@
             <div class="col-md-3">
                 <div class="info">
                     <div class="icon icon-danger">
-                        <i class="nc-icon nc-chart-bar-32"></i>
+                        <i class="nc-icon nc-hat-3"></i>
                     </div>
                     <div class="description">
-                        <h4 class="info-title">Statistics</h4>
-                        <p>Choose from a veriety of many colors resembling sugar paper pastels.</p>
+                        <h4 class="info-title">Nearby schools</h4>
+                        <p>A safe neighborhood is one where children can walk to school</p>
                         <a href="#pkp" class="btn btn-link btn-danger">See more</a>
                     </div>
                 </div>
@@ -71,11 +71,11 @@
             <div class="col-md-3">
                 <div class="info">
                     <div class="icon icon-danger">
-                        <i class="nc-icon nc-sun-fog-29"></i>
+                        <i class="nc-icon nc-bank"></i>
                     </div>
                     <div class="description">
-                        <h4 class="info-title">Delightful design</h4>
-                        <p>Find unique and handmade delightful designs related items directly from our sellers.</p>
+                        <h4 class="info-title">Nearby Parks</h4>
+                        <p>Good Parks make good neighborhoods</p>
                         <a href="#pkp" class="btn btn-link btn-danger">See more</a>
                     </div>
                 </div>
@@ -87,23 +87,42 @@
 
 <div class="section section-dark text-center">
     <div class="container">
-        <h2 class="title">Let's talk about us</h2>
+        <h2 class="title">About me</h2>
         <div class="row">
+
             <div class="col-md-4">
                 <div class="card card-profile card-plain">
                     <div class="card-avatar">
-                        <a href="#avatar"><img src="./assets/img/faces/clem-onojeghuo-3.jpg" alt="..."></a>
+                        <a href="#avatar"><img src="./assets/img/faces/Kurtis.jpg" alt="..."></a>
                     </div>
                     <div class="card-block">
                         <a href="#paper-kit">
                             <div class="author">
-                                <h4 class="card-title">Henry Ford</h4>
-                                <h6 class="card-category">Product Manager</h6>
+                                <h4 class="card-title">Kurtis Reid</h4>
+                                <h6 class="card-category">Software Developer</h6>
                             </div>
                         </a>
                         <p class="card-description text-center">
-                        Teamwork is so important that it is virtually impossible for you to reach the heights of your capabilities or make the money that you want without becoming very good at it.
+                          A software developer looking for a job in Boston, Ma, or wherever 15 minute cities are.
                         </p>
+                        <br>
+
+                        <p class="card-description text-center">
+                          I have always loved walking around cities. They have always felt so lively and magical. When I was a teenager, I took a trip to Washington, D.C.
+
+                          Coming from rural Ohio, I was shocked and amazed that I could get a footlong from Subway without needing to use a car.
+                          <br>
+                        </p>
+                          <p class="card-description text-center">
+                            Such a thing could not be done where I lived. To walk anywhere seemed seemed insane. In the city, grabing a Krispy Kream doughnut actually made sense.
+                          </p>
+                          <!--
+                          <p class="card-description text-center">
+                            When I moved to Quincy, Ma I still had no job, and didnt know where my future job would be, so I kept my car around. I soon started having a problem. Because everything was close enough to walk, I didnt need to drive. This caused a problem though. I discovered that cars need to be driven, otherwise they brake down. Movies had lead me to belive that you could put a tarp over your car and you could start it up whenever. This is not the case, though I wish it was.
+                          </p>
+                          <p class="card-description text-center">
+                            As a result of this, I have had to replace my battery, and my boyfriend and I have agreed to use the car at least once every week or two.
+                        </p>-->
                     </div>
                     <div class="card-footer text-center">
                         <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>
@@ -121,12 +140,12 @@
                     <div class="card-block">
                         <a href="#paper-kit">
                             <div class="author">
-                                <h4 class="card-title">Sophie West</h4>
-                                <h6 class="card-category">Designer</h6>
+                                <h4 class="card-title">Kurtis Reid</h4>
+                                <h6 class="card-category">Software Developer</h6>
                             </div>
                         </a>
                         <p class="card-description text-center">
-                        A group becomes a team when each member is sure enough of himself and his contribution to praise the skill of the others. No one can whistle a symphony. It takes an orchestra to play it.
+                          A software developer looking for a job in Boston, Ma, or wherever 15 minute cities are.
                         </p>
                     </div>
                     <div class="card-footer text-center">
