Centered adress input feild

--- a/src/app/examples/landing/landing.component.scss
+++ b/src/app/examples/landing/landing.component.scss
@@ -1,4 +1,10 @@
 .col-sm-3 {
+  //position: relative;
+  left: 50%;
+  margin-left: -150px
+
+}
+.col-md-4 {
   position: relative;
   left: 50%;
   margin-left: -150px
