--- a/src/app/examples/landing/landing.component.html
+++ b/src/app/examples/landing/landing.component.html
@@ -6,11 +6,13 @@
             <h3>Do you live in a 15 minute city?</h3>
             <br />
 
-            <div class="col-sm-3">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Enter Address">
-                </div>
-                <button type="button" class="btn btn-outline-neutral btn-round">Search your neighborhood</button>
+
+            <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
+              <input type="text" class="form-control" placeholder="Enter Address">
+              <br>
+              <button type="button" class="btn btn-outline-neutral btn-round">Search your neighborhood</button>
+
+
             </div>
             <br />
 
@@ -90,10 +92,10 @@
         <h2 class="title">About me</h2>
         <div class="row">
 
-            <div class="col-md-4">
+
                 <div class="card card-profile card-plain">
                     <div class="card-avatar">
-                        <a href="#avatar"><img src="./assets/img/faces/Kurtis.jpg" alt="..."></a>
+                        <a href="#avatar"><img src="./assets/img/faces/IMG_0347.jpg" alt="..."></a>
                     </div>
                     <div class="card-block">
                         <a href="#paper-kit">
@@ -130,9 +132,9 @@
                         <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-md-4">
+
+            <!--<div class="col-md-4">
                 <div class="card card-profile card-plain">
                     <div class="card-avatar">
                         <a href="#avatar"><img src="./assets/img/faces/joe-gardner-2.jpg" alt="..."></a>
@@ -178,7 +180,7 @@
                         <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
